--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.5, 3.6, 3.7, 3.8]
+        python-version: [3.6, 3.7, 3.8]
     env:
       AWS_DEFAULT_REGION: us-west-2
 
@@ -39,23 +39,3 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
-  
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel twine
-    - name: Build and publish
-      env:
-        TWINE_USERNAME: __TOKEN__
-        TWINE_PASSWORD: ${{ secrets.test_pypi_org }}
-      run: |
-        python setup.py sdist bdist_wheel
-        twine upload dist/*
