--- a/.github/workflows/test_publish.yml
+++ b/.github/workflows/test_publish.yml
@@ -23,4 +23,4 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.test_pypi_org }}
       run: |
         python setup.py sdist bdist_wheel
-        twine upload dist/*
+        twine upload --repository testpypi dist/*
