--- a/.github/workflows/test_publish.yml
+++ b/.github/workflows/test_publish.yml
@@ -19,8 +19,8 @@ jobs:
         pip install setuptools wheel twine
     - name: Build and publish
       env:
-        TWINE_USERNAME: __TOKEN__
-        TWINE_PASSWORD: ${{ secrets.test_pypi_org }}
+        TWINE_USERNAME: '__TOKEN__'
+        TWINE_PASSWORD: ${{ secrets.test_pypi_token }}
       run: |
         python setup.py sdist bdist_wheel
         twine upload --repository testpypi dist/*
