correct sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.organization=kcerdena
 sonar.projectKey=kcerdena_aws_sso
-sonar.sources=aws_sso/*
-sonar.tests=tests/*
+sonar.sources=**/aws_sso/*
+sonar.tests=**/tests/*
 sonar.python.coverage.reportPaths=coverage-reports/coverage-*.xml
 sonar.python.xunit.reportPath=junit/test-results-*.xml
 sonar.python.flake8.reportPaths=lint/flake8-*.out
