--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,6 @@ sonar.organization=kcerdena
 sonar.projectKey=kcerdena_aws_sso
 sonar.sources=./aws_sso/
 sonar.tests=./tests/
-sonar.python.coverage.reportPaths=/github/workspace/coverage-reports/coverage-*.xml
-sonar.python.xunit.reportPath=/github/workspace/junit/test-results-*.xml
-sonar.python.flake8.reportPaths=/github/workspace/lint/flake8-*.out
+sonar.python.coverage.reportPaths=/github/workspace/coverage-reports/
+sonar.python.xunit.reportPath=/github/workspace/junit/
+sonar.python.flake8.reportPaths=/github/workspace/lint/
