--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.organization=kcerdena
 sonar.projectKey=kcerdena_aws_sso
-sonar.sources=./aws_sso/
-sonar.tests=./tests/
-sonar.python.coverage.reportPaths=/github/workspace/coverage-reports/coverage-3.6.xml,/github/workspace/coverage-reports/coverage-3.7.xml,/github/workspace/coverage-reports/coverage-3.8.xml
-sonar.python.xunit.reportPath=/github/workspace/junit/test-results-3.6.xml,/github/workspace/junit/test-results-3.7.xml,/github/workspace/junit/test-results-3.8.xml
-sonar.python.flake8.reportPaths=/github/workspace/lint/flake8-3.6.out,/github/workspace/lint/flake8-3.7.out,/github/workspace/lint/flake8-3.8.out
+sonar.sources=.
+sonar.tests=.
+sonar.python.coverage.reportPaths=coverage-reports/coverage-3.8.xml
+sonar.python.xunit.reportPath=junit/test-results-3.8.xml
+sonar.python.flake8.reportPaths=lint/flake8-3.8.out
