fix tags in workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,10 @@ name: Publish
 
 on:
   push:
-    branches: [ master ]
-  tags: [ v* ]
+    branches: 
+    - master
+    tags:
+    - v*
 
 jobs:
   deploy:
